[DDW-391] Share on clicking the row

--- a/source/renderer/app/components/wallet/receive/AddressActions.scss
+++ b/source/renderer/app/components/wallet/receive/AddressActions.scss
@@ -45,6 +45,8 @@
 .shareAddressButton {
   cursor: pointer;
   line-height: 1.36;
+  opacity: 0.4;
+  transition: opacity 0.25s;
   white-space: nowrap;
 }
 .shareIcon {
