DDW-430 - Smart tooltips - removing old codebase

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -31,41 +31,22 @@
     .spendingPasswordField {
       display: flex;
 
-      .tooltip {
-        &:hover {
-          .infoIcon {
-            opacity: 0.8;
-          }
-        }
-      }
-
-      .tooltip {
+      > span {
         height: 12px;
-        left: 142px;
+        left: 145px;
         position: absolute;
         top: 54px;
         width: 12px;
       }
 
-      :global .PasswordInput_root {
-        width: 100%;
+      &.jpLangTooltipIcon {
+        > span {
+          left: 135px !important;
+        }
       }
 
-      :global .InlineEditingDropdown-tooltip_bubble {
-        border-radius: 10px;
-        height: 87px;
-        left: 125px;
-        line-height: 1.2;
-        top: 67px;
-        white-space: normal;
-        width: 291.5px;
-
-        span[data-bubble-arrow]:before,
-        span[data-bubble-arrow]:after {
-          left: -4%;
-          top: 42%;
-          transform: rotate(90deg);
-        }
+      :global .PasswordInput_root {
+        width: 100%;
       }
 
       .infoIcon {
@@ -73,6 +54,10 @@
         opacity: 0.4;
         transform: translateY(2px);
         width: 14px;
+
+        &:hover {
+          opacity: 0.8;
+        }
 
         path {
           fill: var(--theme-input-label-color);
