DDW-430 - Smart tooltips - fixing focus

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -138,6 +138,10 @@
     .slider {
       flex: 1;
 
+      span {
+        outline: none;
+      }
+
       :global {
         .SimpleTooltip_bubble {
           .SimpleBubble_bubble {
@@ -204,5 +208,9 @@
 
   .col {
     @extend %regularText;
+
+    span {
+      outline: none;
+    }
   }
 }
