DDW-430 - Smart tooltips - fixing focus

--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -46,6 +46,7 @@
       > span {
         height: 12px;
         left: -139px;
+        outline: none;
         position: relative;
         top: 5px;
         width: 12px;
