--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -78,6 +78,7 @@
         > span {
           height: 12px;
           left: -140px;
+          outline: none;
           position: relative;
           top: 2px;
           width: 12px;
