--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -34,6 +34,7 @@
       > span {
         height: 12px;
         left: 145px;
+        outline: none;
         position: absolute;
         top: 54px;
         width: 12px;
