--- a/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
@@ -27,6 +27,7 @@
     > span {
       height: 12px;
       left: -149px;
+      outline: none;
       position: relative;
       top: 1px;
       width: 12px;
