--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -99,7 +99,7 @@
     padding: 20px;
 
     &.noUpdateItem {
-      padding: 10px 20px;
+      padding: 10px 20px 0;
     }
 
     &::-webkit-scrollbar-track {
