--- a/source/renderer/app/components/wallet/receive/AddressSequential.scss
+++ b/source/renderer/app/components/wallet/receive/AddressSequential.scss
@@ -9,17 +9,17 @@ $bg0: rgba(0, 0, 0, 0);
   padding: 10.5px 0;
   word-break: break-all;
   &.usedWalletAddress {
-    .addressId,
-    .shareIcon {
+    .addressId {
       opacity: 0.4;
-    }
-    .shareAddressLabel {
-      opacity: 0.2;
     }
   }
   &:hover {
+    .addressId {
+      opacity: 1;
+    }
     :global {
-      .AddressActions_shareAddressButton {
+      .AddressActions_shareIcon,
+      .AddressActions_shareAddressLabel {
         opacity: 1;
       }
     }
@@ -32,8 +32,10 @@ $bg0: rgba(0, 0, 0, 0);
   font-family: var(--font-mono);
   letter-spacing: -0.4px;
   margin-right: 4px;
+  opacity: 1;
   overflow: hidden;
   position: relative;
+  transition: opacity 0.25s;
   user-select: none;
   white-space: nowrap;
 
