[DDW-391] Receive screen with address sharing functionality (#2245)
* [DDW-391] [DDW-391] Receive screen with address sharing functionality

* [DDW-391] PDF download notification

* [DDW-391] Styling and adjustments

* [DDW-391] PDF custom name and filename sanitization

* [DDW-391] Translation manager

* [DDW-391] Flow issues

* [DDW-391] Share on clicking the row

* [DDW-391] Save QR code image

* [DDW-391] Set fixed version

* [DDW-391] Missing Japanese translation

* [DDW-391] Styling adjustment

* [DDW-391] Remove PDF footer for mainnet

* [DDW-391] Translation manager

* [DDW-391] Flow error

* [DDW-391] Fix CI builds

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/wallet/receive/AddressSequential.scss
+++ b/source/renderer/app/components/wallet/receive/AddressSequential.scss
@@ -3,30 +3,39 @@ $bg0: rgba(0, 0, 0, 0);
 
 .component {
   box-sizing: border-box;
+  cursor: pointer;
   display: flex;
   justify-content: space-between;
   padding: 10.5px 0;
   word-break: break-all;
   &.usedWalletAddress {
-    .addressId,
-    .shareIcon {
+    .addressId {
       opacity: 0.4;
     }
-    .shareAddressLabel {
-      opacity: 0.2;
+  }
+  &:hover {
+    .addressId {
+      opacity: 1;
+    }
+    :global {
+      .AddressActions_shareIcon,
+      .AddressActions_shareAddressLabel {
+        opacity: 1;
+      }
     }
   }
 }
 .addressId {
-  cursor: default;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
   font-family: var(--font-mono);
   letter-spacing: -0.4px;
   margin-right: 4px;
+  opacity: 1;
   overflow: hidden;
   position: relative;
+  transition: opacity 0.25s;
   user-select: none;
   white-space: nowrap;
 
