--- a/source/renderer/app/components/wallet/receive/AddressActions.scss
+++ b/source/renderer/app/components/wallet/receive/AddressActions.scss
@@ -5,13 +5,36 @@
   height: 18px;
   justify-content: flex-end;
 }
-.copyActions {
+
+/* SHARE */
+.shareAddressButton {
+  cursor: pointer;
+  line-height: 1.36;
+  white-space: nowrap;
+}
+.shareIcon {
+  opacity: 1;
+  transition: opacity 0.25s;
+  & > svg {
+    height: 12px;
+    width: 12px;
+    path {
+      fill: var(--theme-icon-copy-address-color);
+    }
+  }
+}
+.shareAddressLabel {
+  color: var(--theme-label-button-color);
+  font-size: 14px;
+  margin-left: 6px;
+  opacity: 0.5;
+  transition: opacity 0.25s;
 }
 .isUsed {
-  .copyAddress .copyIcon {
+  .shareAddressButton .shareIcon {
     opacity: 0.4;
   }
-  .copyAddress .copyAddressLabel {
+  .shareAddressButton .shareAddressLabel {
     opacity: 0.2;
   }
 }
@@ -40,25 +63,11 @@
     }
   }
 }
-
-/* SHARE */
-.shareAddressButton {
-  cursor: pointer;
-  line-height: 1.36;
-  white-space: nowrap;
-}
-.shareIcon {
-  & > svg {
-    height: 12px;
-    width: 12px;
-    path {
-      fill: var(--theme-icon-copy-address-color);
-    }
+.isUsed {
+  .copyAddress .copyIcon {
+    opacity: 0.4;
   }
-}
-.shareAddressLabel {
-  color: var(--theme-label-button-color);
-  font-size: 14px;
-  margin-left: 6px;
-  opacity: 0.5;
+  .copyAddress .copyAddressLabel {
+    opacity: 0.2;
+  }
 }
