DDW-430 - Smart tooltips - fixing hover border

--- a/source/renderer/app/components/status/DaedalusDiagnostics.scss
+++ b/source/renderer/app/components/status/DaedalusDiagnostics.scss
@@ -270,14 +270,8 @@
 
     &:hover {
       .daedalusStateDirectoryPath {
-        &:after {
-          border-top: 1px solid var(--theme-network-window-white-color);
-          bottom: 6px;
-          content: '';
-          left: 0;
-          position: absolute;
-          right: 1px;
-        }
+        border-bottom: 1px solid var(--theme-network-window-white-color);
+        margin-bottom: -1px;
       }
 
       svg {
