--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -425,13 +425,13 @@
 
       .fieldLabel {
         line-height: 1;
+        margin-right: 4px;
         opacity: 0.8;
       }
 
       .questionMark {
         display: none;
         height: 19px;
-        margin-left: 2px;
         width: 10px;
 
         :global {
