[DDW-431] Newsfeed shadow (#2242)
* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown - changelog

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown

* DDW-373 Syncing animation on wallet dropdown - fixes for step 3 failure dialog

* DDW-373 Syncing animation on wallet dropdown - fixes for step 3 failure dialog

* DDW-373 Syncing animation on wallet dropdown - svg fix

* DDW-373 Syncing animation on wallet dropdown - wallet name + jp translations

* DDW-373 Syncing animation on wallet dropdown - wallet name + jp translations

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* [DDW-373] Update CHANGELOG

* [DDW-373] Update CHANGELOG

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes for spinner

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-431 - Newsfeed shadow

* DDW-431 Newsfeed shadow

* DDW-431 Newsfeed shadow

* DDW-431 - Newsfeed shadow

* DDW-431 - Newsfeed shadow

* DDW-431 - Newsfeed shadow

* DDW-431 - Newsfeed shadow fixes

* DDW-431 - Newsfeed shadow fixes - change of shadows

* [DDW-431] Add drop-shadow transition

* DDW-431 - Newsfeed s

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -32,7 +32,7 @@
     z-index: 1;
 
     &.hasShadow {
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: var(--theme-news-feed-header-box-shadow-color);
     }
 
     .newsFeedTitle {
@@ -98,8 +98,36 @@
     overflow: hidden;
     padding: 20px;
 
-    &::-webkit-scrollbar-track {
-      margin: 13px 0;
+    &.noUpdateItem {
+      padding: 0 20px;
+
+      *::-webkit-scrollbar-track {
+        margin: 13px 0;
+      }
+
+      .newsFeedList {
+        height: calc(100% - 85px);
+        padding: 10px 20px 20px 0;
+      }
+    }
+
+    *::-webkit-scrollbar-track {
+      margin-bottom: 11px;
+      margin-top: 25px;
+    }
+
+    :global {
+      *::-webkit-scrollbar-thumb {
+        background-color: var(
+          --theme-splash-network-scrollbar-thumb-background
+        );
+        min-height: 150px;
+        &:hover {
+          background-color: var(
+            --theme-splash-network-scrollbar-thumb-background-hover
+          );
+        }
+      }
     }
 
     .newsFeedEmptyContainer,
@@ -133,8 +161,20 @@
       width: calc(100% - 20px);
 
       &.hasUpdate {
-        height: calc(100% - 220px);
-        margin-top: 115px;
+        height: calc(100% - 190px);
+        margin-top: 85px;
+      }
+    }
+
+    .updateItem {
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+      margin: -20px;
+      padding: 20px 20px 15px;
+
+      &.hasShadow {
+        background: var(--theme-news-feed-background-color);
+        box-shadow: var(--theme-news-feed-header-box-shadow-color);
+        z-index: 1;
       }
     }
   }
@@ -147,5 +187,7 @@
     border: 1px solid var(--theme-news-item-title-color);
     margin: 15px 0;
     opacity: 0.2;
+    transition: opacity 0.3s linear;
+    visibility: visible;
   }
 }
