--- a/source/renderer/app/components/wallet/WalletConnectDialog.scss
+++ b/source/renderer/app/components/wallet/WalletConnectDialog.scss
@@ -9,15 +9,12 @@
     .hardwareWalletUnknown,
     .hardwareWalletLedger,
     .hardwareWalletTrezor {
+      opacity: 0.7;
       text-align: center;
 
       svg {
         path {
-          stroke: var(--theme-hardware-wallet-title-color);
-
-          > g {
-            fill: var(--theme-hardware-wallet-title-color);
-          }
+          fill: var(--theme-hardware-wallet-title-color);
         }
       }
     }
