[DDW-430] Smart tooltips (#2243)
* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown - changelog

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown

* DDW-373 Syncing animation on wallet dropdown - fixes for step 3 failure dialog

* DDW-373 Syncing animation on wallet dropdown - fixes for step 3 failure dialog

* DDW-373 Syncing animation on wallet dropdown - svg fix

* DDW-373 Syncing animation on wallet dropdown - wallet name + jp translations

* DDW-373 Syncing animation on wallet dropdown - wallet name + jp translations

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* [DDW-373] Update CHANGELOG

* [DDW-373] Update CHANGELOG

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes for spinner

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown - fixes

* DDW-430 - Smart tooltips

* DDW-430 - Smart tooltips integration

* DDW-430 - Smart tooltips integration

* DDW-430 - Smart tooltips integration

* DDW-430 - Smart tooltips integration

* DDW-430 - Smart tooltips fixes

* DDW-430 - Smart tooltips fixes

* DDW-430 - Smart tooltips fixes

* DDW-430 - Smart tooltips - cleani

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -46,43 +46,32 @@
   }
 }
 
-.clearSearch {
-  margin-top: -2px;
+.clearSearchButton {
+  background-color: var(
+    --theme-staking-stake-pools-search-clear-button-background-color
+  );
+  border-radius: 3px;
+  cursor: pointer;
+  height: 28px;
+  position: relative;
+  top: -2px;
+  width: 28px;
 
-  > div > div {
-    margin-left: -19px !important;
-  }
-
-  button {
+  &:hover {
     background-color: var(
-      --theme-staking-stake-pools-search-clear-button-background-color
+      --theme-staking-stake-pools-search-clear-button-hover-background-color
     );
-    border-radius: 3px;
-    cursor: pointer;
-    height: 28px;
-    width: 28px;
-
-    &:hover {
-      background-color: var(
-        --theme-staking-stake-pools-search-clear-button-hover-background-color
-      );
-    }
   }
+}
 
-  svg {
+.clearSearchIcon {
+  > svg {
     position: relative;
     top: 0.5px;
     width: 10px;
 
     > g > g {
       fill: var(--theme-staking-stake-pools-search-clear-button-color);
-    }
-  }
-
-  &:hover {
-    > div > div {
-      height: 30px;
-      line-height: 1.3;
     }
   }
 }
