--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -31,55 +31,34 @@
     .spendingPasswordField {
       display: flex;
 
-      .tooltip {
-        &:hover {
-          .infoIcon {
-            opacity: 0.8;
-          }
-        }
-      }
-
-      :global
-        .ChangeSpendingPasswordDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+      > span {
         height: 12px;
-        left: 136px;
+        left: 145px;
+        outline: none;
         position: absolute;
         top: 54px;
         width: 12px;
       }
 
-      :global
-        .ChangeSpendingPasswordDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
-        left: 128px !important;
+      &.jpLangTooltipIcon {
+        > span {
+          left: 135px !important;
+        }
       }
 
       :global .PasswordInput_root {
         width: 100%;
       }
 
-      :global .InlineEditingDropdown-tooltip_bubble {
-        border-radius: 10px;
-        height: 87px;
-        left: 125px;
-        line-height: 1.2;
-        top: 67px;
-        white-space: normal;
-        width: 291.5px;
-
-        span[data-bubble-arrow]:before,
-        span[data-bubble-arrow]:after {
-          left: -4%;
-          top: 42%;
-          transform: rotate(90deg);
-        }
-      }
-
       .infoIcon {
         height: 14px;
-        margin-left: 6px;
         opacity: 0.4;
         transform: translateY(2px);
         width: 14px;
+
+        &:hover {
+          opacity: 0.8;
+        }
 
         path {
           fill: var(--theme-input-label-color);
