--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -43,50 +43,30 @@
     .spendingPasswordField {
       display: flex;
 
-      .tooltip {
-        &:hover {
-          .infoIcon {
-            opacity: 0.8;
-          }
-        }
-      }
-
-      :global
-        .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+      > span {
         height: 12px;
-        left: -145px;
+        left: -139px;
+        outline: none;
+        position: relative;
         top: 5px;
         width: 12px;
       }
 
-      :global
-        .WalletCreateDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
-        left: -40px !important;
-      }
-
-      :global .InlineEditingDropdown-tooltip_bubble {
-        border-radius: 10px;
-        height: 87px;
-        left: 123px;
-        line-height: 1.2;
-        top: 66px;
-        white-space: normal;
-        width: 291.5px;
-
-        span[data-bubble-arrow]:before,
-        span[data-bubble-arrow]:after {
-          left: -4%;
-          top: 42%;
-          transform: rotate(90deg);
+      &.jpLangTooltipIcon {
+        > span {
+          left: -35px !important;
         }
       }
 
       .infoIcon {
         height: 14px;
-        margin-left: 6px;
         opacity: 0.4;
         transform: translateY(2px);
         width: 14px;
+
+        &:hover {
+          opacity: 0.8;
+        }
 
         path {
           fill: var(--theme-input-label-color);
