--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -75,45 +75,30 @@
       .spendingPasswordField {
         display: flex;
 
-        .tooltip {
-          &:hover {
-            .infoIcon {
-              opacity: 0.8;
-            }
-          }
-        }
-
-        :global
-          .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+        > span {
           height: 12px;
-          left: -153px;
+          left: -140px;
+          outline: none;
+          position: relative;
           top: 2px;
           width: 12px;
         }
 
-        :global .InlineEditingDropdown-tooltip_bubble {
-          border-radius: 10px;
-          height: 87px;
-          left: 125px;
-          line-height: 1.2;
-          top: 66px;
-          white-space: normal;
-          width: 291.5px;
-
-          span[data-bubble-arrow]:before,
-          span[data-bubble-arrow]:after {
-            left: -4%;
-            top: 42%;
-            transform: rotate(90deg);
+        &.jpLangTooltipIcon {
+          > span {
+            left: -35px !important;
           }
         }
 
         .infoIcon {
           height: 14px;
-          margin-left: 6px;
           opacity: 0.4;
           transform: translateY(2px);
           width: 14px;
+
+          &:hover {
+            opacity: 0.8;
+          }
 
           path {
             fill: var(--theme-input-label-color);
