--- a/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
@@ -24,25 +24,19 @@
   .spendingPasswordField {
     display: flex;
 
-    .tooltip {
-      &:hover {
-        .infoIcon {
-          opacity: 0.8;
-        }
-      }
-    }
-
-    :global
-      .ConfigurationDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+    > span {
       height: 12px;
-      left: -154px;
+      left: -149px;
+      outline: none;
+      position: relative;
       top: 1px;
       width: 12px;
     }
 
-    :global
-      .ConfigurationDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
-      left: -147px !important;
+    &.jpLangTooltipIcon {
+      > span {
+        left: -141px !important;
+      }
     }
 
     :global {
@@ -52,29 +46,15 @@
       }
     }
 
-    :global .InlineEditingDropdown-tooltip_bubble {
-      border-radius: 10px;
-      height: 87px;
-      left: 124px;
-      line-height: 1.2;
-      top: 69px;
-      white-space: normal;
-      width: 291.5px;
-
-      span[data-bubble-arrow]:before,
-      span[data-bubble-arrow]:after {
-        left: -4%;
-        top: 42%;
-        transform: rotate(90deg);
-      }
-    }
-
     .infoIcon {
       height: 14px;
-      margin-left: 6px;
       opacity: 0.4;
       transform: translateY(2px);
       width: 14px;
+
+      &:hover {
+        opacity: 0.8;
+      }
 
       path {
         fill: var(--theme-input-label-color);
