--- a/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsSign.scss
+++ b/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsSign.scss
@@ -43,4 +43,12 @@
       font-weight: 500;
     }
   }
+
+  .learnMoreWrapper {
+    margin-top: 10px;
+    .externalLink {
+      font-family: var(--font-regular);
+      font-size: 16px;
+    }
+  }
 }
