[DDW-481] Input UI and validation

--- a/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
+++ b/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
@@ -1,7 +1,6 @@
 .component {
-  :global {
-    .SimpleFormField_root:not(:first-child) {
-      margin-top: 20px;
-    }
-  }
+  margin-bottom: 20px;
+}
+.smashServerUrl {
+  margin-top: 20px;
 }
