[DDW-481] Api, Store and changes handling

--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -16,6 +16,18 @@
     }
   }
 
+  &.readOnly {
+    input:read-only {
+      background: var(--rp-input-bg-color-disabled);
+      border: none;
+    }
+    &:hover {
+      input {
+        cursor: text;
+      }
+    }
+  }
+
   .button {
     bottom: 14px;
     color: var(--theme-label-button-color);
