--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -29,7 +29,33 @@
     color: var(--theme-staking-stake-pools-title-color);
     line-height: 1.38;
     margin: 20px 0 10px;
-    opacity: 0.5;
     padding-left: 20px;
+    > span {
+      opacity: 0.5;
+    }
+  }
+
+  .smashSettings {
+    font-size: 16px;
+    cursor: pointer;
+    > span {
+      display: inline-block;
+      max-width: 570px;
+      opacity: 0.5;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      vertical-align: top;
+    }
+    &:hover {
+      svg {
+        opacity: 1;
+      }
+    }
+  }
+  .smashSettingsIcon svg {
+    margin-left: 4px;
+    width: 10px;
+    opacity: 0.6;
   }
 }
