[DDW-438]: Wallet public key visible - draft

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -20,11 +20,8 @@
     }
   }
 
-  .deleteWalletLabel {
-    color: var(--theme-input-label-color);
-    font-size: 16px;
-    font-weight: 500;
-    padding-bottom: 14px;
+  .walletPublicKeyBox {
+    margin-top: 20px;
   }
 
   .deleteWalletBox {
